couple more refs and paragraphs

--- a/vet-obserror.bib
+++ b/vet-obserror.bib
@@ -1,3 +1,32 @@
+@article{vanwormer2014toxolandsea,
+    author = {VanWormer, Elizabeth AND Miller, Melissa A. AND Conrad, Patricia A. AND Grigg, Michael E. AND Rejmanek, Daniel AND Carpenter, Tim E. AND Mazet, Jonna A. K.},
+    journal = {PLOS Neglected Tropical Diseases},
+    publisher = {Public Library of Science},
+    title = {Using Molecular Epidemiology to Track Toxoplasma gondii from Terrestrial Carnivores to Marine Hosts: Implications for Public Health and Conservation},
+    year = {2014},
+    month = {05},
+    volume = {8},
+    url = {https://doi.org/10.1371/journal.pntd.0002852},
+    pages = {1-14},
+    abstract = {Author Summary Toxoplasma gondii, a global parasite shed by domestic and wild felids, can cause severe disease in people and animals. In coastal California, USA, many sea otters have died due to T. gondii. Because T. gondii is shed by felids on land, otter infection suggests that this extremely hardy parasite is transported in freshwater runoff to aquatic environments, where animals and humans can become exposed. Molecular characterization of T. gondii strains infecting terrestrial and marine hosts can provide clues about parasite transmission cycles and sources of otter infection. By testing 373 and characterizing T. gondii infection in 85 terrestrial carnivores (domestic cats and wild carnivores) sharing the California coast, we found that Type X, the type previously identified in over 70% of infected sea otters tested, was more common in wild felids than domestic cats. However, discovery of Type X in domestic cats in this region suggests that they may play an important role in marine infection, as their populations are larger than those of wild felids. Differences in types of T. gondii among carnivores and in urban and agricultural vs. undeveloped areas suggest that there are separate, but overlapping domestic and wild cycles of T. gondii transmission in coastal California.},
+    number = {5},
+    doi = {10.1371/journal.pntd.0002852}
+}
+
+@article {evans2015_habitat_cwd,
+author = {Evans, Tyler S. and Kirchgessner, Megan S. and Eyler, Brian and Ryan, Christopher W. and Walter, W. David},
+title = {Habitat influences distribution of chronic wasting disease in white-tailed deer},
+journal = {The Journal of Wildlife Management},
+volume = {80},
+number = {2},
+issn = {1937-2817},
+url = {http://dx.doi.org/10.1002/jwmg.1004},
+doi = {10.1002/jwmg.1004},
+pages = {284--291},
+keywords = {chronic wasting disease, CWD, habitat, Northeast, Odocoileus virginianus, white-tailed deer},
+year = {2016},
+}
+
 @article{hefley2013statistical,
   title={Statistical indicators and state--space population models predict extinction in a population of bobwhite quail},
   author={Hefley, Trevor J and Tyre, Andrew J and Blankenship, Erin E},
