--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,11 @@ A fundamental question in ecology broadly has to do with how species are distrib
 
 The primary issue arising from assuming observations are accurate when they are not is bias [@tyre2003improving]. If a species is sometimes missed when present, a false negative, estimates of the effects of covariates on the probability of presence are biased towards zero. **is there a paper looking at effects of false positives in a similar broad way?**
 
+A wildlife disease example of habitat mapping is Chronic wasting disease in deer [@evans2015_habitat_cwd]. These approaches are being used to prioritize areas for management (citations therein).
 
+Another example is the distribution of different strains of *Toxoplasmosis gondii* across the land-sea interface [@vanwormer2014toxolandsea]. 
+
+Understanding the distribution of diseases is complicated by the fact that the habitat of the disease, the host population, is even more fragmented than the habitat of the host species. 
 
 # References {-}
 
