a bit more flesh and shift to single page html output

--- a/vet-obserror.bib
+++ b/vet-obserror.bib
@@ -1,3 +1,14 @@
+@article{mackenzie2005designing,
+  title={Designing occupancy studies: general advice and allocating survey effort},
+  author={MacKenzie, Darryl I and Royle, J Andrew},
+  journal={Journal of applied Ecology},
+  volume={42},
+  number={6},
+  pages={1105--1114},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
 @article{vanwormer2014toxolandsea,
     author = {VanWormer, Elizabeth AND Miller, Melissa A. AND Conrad, Patricia A. AND Grigg, Michael E. AND Rejmanek, Daniel AND Carpenter, Tim E. AND Mazet, Jonna A. K.},
     journal = {PLOS Neglected Tropical Diseases},
