--- a/vet-obserror.bib
+++ b/vet-obserror.bib
@@ -1,3 +1,18 @@
+
+
+@article {MEE3:MEE312743,
+author = {Guillera-Arroita, Gurutzeta and Lahoz-Monfort, José Joaquín and van Rooyen, Anthony R. and Weeks, Andrew R. and Tingley, Reid},
+title = {Dealing with false-positive and false-negative errors about species occurrence at multiple levels},
+journal = {Methods in Ecology and Evolution},
+issn = {2041-210X},
+url = {http://dx.doi.org/10.1111/2041-210X.12743},
+doi = {10.1111/2041-210X.12743},
+pages = {n/a--n/a},
+keywords = {detectability, environmental DNA, identifiability, imperfect detection, monitoring, multiple stages, sensitivity, species occupancy, specificity},
+year = {2017},
+}
+
+
 @article{mackenzie2005designing,
   title={Designing occupancy studies: general advice and allocating survey effort},
   author={MacKenzie, Darryl I and Royle, J Andrew},
