first draft abstract and fixed build error

--- a/vet-obserror.bib
+++ b/vet-obserror.bib
@@ -1,7 +1,5 @@
-
-
 @article {MEE3:MEE312743,
-author = {Guillera-Arroita, Gurutzeta and Lahoz-Monfort, José Joaquín and van Rooyen, Anthony R. and Weeks, Andrew R. and Tingley, Reid},
+author = {Guillera-Arroita, Gurutzeta and Lahoz-Monfort, Josee Joaquín and van Rooyen, Anthony R. and Weeks, Andrew R. and Tingley, Reid},
 title = {Dealing with false-positive and false-negative errors about species occurrence at multiple levels},
 journal = {Methods in Ecology and Evolution},
 issn = {2041-210X},
