--- a/vet-obserror.bib
+++ b/vet-obserror.bib
@@ -1,3 +1,15 @@
+@article{houlahan2017priority,
+  title={The priority of prediction in ecological understanding},
+  author={Houlahan, Jeff E and McKinney, Shawn T and Anderson, T Michael and McGill, Brian J},
+  journal={Oikos},
+  volume={126},
+  number={1},
+  pages={1--7},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+
 @article {MEE3:MEE312743,
 author = {Guillera-Arroita, Gurutzeta and Lahoz-Monfort, Josee Joaquín and van Rooyen, Anthony R. and Weeks, Andrew R. and Tingley, Reid},
 title = {Dealing with false-positive and false-negative errors about species occurrence at multiple levels},
