--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,12 @@ link-citations: true
 ---
 
 ```{r setup, include=FALSE}
+# install missing packages if necessary. this will not overwrite/update existing packages.
+list.of.packages <- c("tidyverse", "huxtable")
+new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
+if(length(new.packages)>0) {install.packages(new.packages)}
+
+# Load packages
 library(tidyverse)
 library(huxtable)
 ```
